--- a/main.html
+++ b/main.html
@@ -10,7 +10,40 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+		<form method="post">
+			<label for="name"> Name </label>
+			<input id="name" type="text" placeholder="Name" required>
 
+			<label for="email"> Email </label>
+			<input id="email" type="email" placeholder="Email" required>
+
+			<label for="gender_m, gender_f"> Gender </label>
+			<input name="gender" id="gender_m, gender_f" type="radio"  required> male
+			<input name="gender" id= "gender_m, gender_f" type="radio"  required> female
+			
+			<label for="cars"> Car Brands	 </label>
+			<input id="cars" type="Select" placeholder="--Please choose an option--
+" required>
+
+			<label for="age"> Age </label>
+			<input id="age" type="Number" placeholder="Age" required>
+
+			<label for="dob"> DOB </label>
+			<input id="dob" type="Date" required>
+
+			<label for="tel"> Phone Number </label>
+			<input id="tel" type="Tel" placeholder="xxx-xxx-xxxx
+" >
+
+			<label for="password"> Password </label>
+			<input id="password" type="Password" placeholder="Password" required>
+
+			<label for="tos"> Email </label>
+			<input id="tos" type="checkbox" required>
+
+			<input type="submit">Submit 
+			
+		</form>
 </body>
 
 </html>
