--- a/main.html
+++ b/main.html
@@ -22,8 +22,10 @@
 			<input name="gender" id= "gender_m, gender_f" type="radio"  required> female
 			
 			<label for="cars"> Car Brands	 </label>
-			<input id="cars" type="Select" placeholder="--Please choose an option--
-" required>
+			<select id="cars" name="cars" required>
+			<option disabled selected>--Please choose an option--</option>
+			</select>
+
 
 			<label for="age"> Age </label>
 			<input id="age" type="Number" placeholder="Age" required>
