--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 			<label for="tos"> Email </label>
 			<input id="tos" type="checkbox" required>
 
-			<input type="submit">Submit 
+		<button type="submit">Submit</button>
 			
 		</form>
 </body>
